<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VectorDrawableCompat"
    tools:context=".activities.RegipamActivity"
    android:background="@color/primary">


    <Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/header"
        android:contentDescription="@string/header" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/regist_header_1"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/lato_bold"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_alignStart="@+id/tvDesc"
        android:text="@string/regist_header_2"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_bold"/>

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circlet"
        android:transitionName="image"
        android:contentDescription="@string/circle1" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-90dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle"
        android:contentDescription="@string/circle2" />


    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-130dp"
        android:layout_marginEnd="-100dp"
        android:src="@drawable/circlet"
        android:contentDescription="@string/circle1" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="#E633333A"
                app:cardCornerRadius="35dp"
                app:cardElevation="4dp">

                <FrameLayout
                    android:id="@+id/layoutImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:visibility="gone">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:background="@drawable/background_image"
                        android:backgroundTint="#FA52B2"
                        android:scaleType="centerCrop"
                        app:riv_oval="true" />

                    <TextView
                        android:id="@+id/textAddImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/your_photo"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </FrameLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="35dp">

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/nama"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvUsername"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_person"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/white"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etUsername"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvEmail"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_email"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/white"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/tvTelepon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etEmail"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/telepon"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvTelepon"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:autofillHints=""
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_call_2"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/white"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etTelepon"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPassword"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:autofillHints=""
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_lock"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/password_utama"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="#73FFFFFF"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/tvPass2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etPassword"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/password_ganda"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPass2"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:autofillHints=""
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_confirm_lock"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/password_tambahan"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="#73FFFFFF"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/cv"
                android:layout_alignEnd="@+id/cv"
                android:layout_alignBottom="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="-20dp"
                android:elevation="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    tools:ignore="UselessParent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#73FFB464"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/register_button"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>


            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>